tests/ui/delegation/hir-crate-items-before-lowering-ices.ice_155164.stderr
error: complex const arguments must be placed inside of a `const` block
  --> $DIR/hir-crate-items-before-lowering-ices.rs:46:13
   |
LL | /             {
LL | |
LL | |                 struct W<I>;
LL | |                 impl<I> W<I> {
...  |
LL | |             },
   | |_____________^

error: aborting due to 1 previous error

